add new endpoint for dashboard
